# llm-context-search

./: .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  configuration.md  index.md  install.md  mcp.md  python-sdk.md  quickstart.md
src/llm_context_search/: __init__.py  _builder.py  cli.py  config.py  engine.py  mcp_server.py  models.py
src/llm_context_search/cache/: __init__.py  ttl.py  wrappers.py
src/llm_context_search/chunk/: __init__.py  base.py  paragraph.py
src/llm_context_search/dedupe/: __init__.py  urls.py
src/llm_context_search/extract/: __init__.py  base.py  fallback.py  trafilatura.py
src/llm_context_search/fetch/: __init__.py  base.py  fetcher.py  safety.py
src/llm_context_search/normalize/: __init__.py  urls.py
src/llm_context_search/pack/: __init__.py  base.py  markdown.py
src/llm_context_search/providers/: __init__.py  base.py  searxng.py
src/llm_context_search/rank/: __init__.py  base.py  lexical.py  quality.py
src/llm_context_search/utils/: __init__.py  hashing.py  text.py  timing.py  tokens.py
tests/: test_chunk.py  test_dedupe.py  test_engine.py  test_mcp.py  test_normalize.py  test_pack.py
