[project]
name = "llm-context-search"
version = "0.1.0"
description = "Fast LLM-free search-to-context engine for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ryszard Orlikowski" }]
keywords = ["mcp", "search", "context", "llm", "agents", "rag", "searxng", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",
    "typer>=0.12",
    "rich>=13.7",
    "mcp>=1.27,<2",
]

[project.urls]
Homepage = "https://github.com/rorlikowski/llm-context-search"
Repository = "https://github.com/rorlikowski/llm-context-search"
Issues = "https://github.com/rorlikowski/llm-context-search/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
llm-context = "llm_context_search.cli:app"
llm-context-mcp = "llm_context_search.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_context_search"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
